--- a/src/app/pages/youtube/youtube.html
+++ b/src/app/pages/youtube/youtube.html
@@ -1,23 +1,33 @@
-@let data = userResource.value();
+<form (submit)="search(input.value); $event.preventDefault()">
+  <input
+      type="text"
+      [value]="videoId()"
+      placeholder="Introduce el enlace o ID del vídeo..."
+      autofocus
+      name="input"
+      autocomplete="false"
+      spellcheck="false"
+      #input
+      [disabled]="loading()"
+      (input)="input.value = $event.target.value"
+    />
+    
+  <button type="submit" [disabled]="loading() || !input.value">Buscar</button>
+  
+  <div>
+    @for(radio of radioTypes; track radio.value) {
+      <input type="radio" 
+             [id]="radio.value" 
+             name="type" 
+             [value]="radio.value" 
+             [checked]="type() === radio.value" 
+             (change)="type.set(radio.value)"
+             [disabled]="loading()">
+      <label [for]="radio.value">{{radio.label}}</label>
+    }
+  </div>
+</form>
 
 <main>
-  <form (submit)="search(input.value); $event.preventDefault()">
-    <input
-        type="text"
-        [value]="videoId()"
-        placeholder="Introduce el ID del vídeo..."
-        autofocus
-        name="input"
-        autocomplete="false"
-        spellcheck="false"
-        #input
-      />
-
-    <button type="submit">Buscar</button>
-  </form>
-
-  @if (data !== null) {
-    <p><b>Título: </b> <span>{{ data?.title }}</span></p>
-  }
-  <app-chat-box [chat]="chat()" [loading]="loading()"></app-chat-box>
+  <app-chat-box [chat]="chat()" [loading]="loading()"/>
 </main>
