--- a/src/app/pages/youtube/youtube.scss
+++ b/src/app/pages/youtube/youtube.scss
@@ -1,13 +1,31 @@
 form {
-  margin-bottom: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  align-items: center;
+  background: var(--background-color);
+  z-index: 5;
+  width: var(--container-width);
+  max-width: var(--container-width);
+  margin: 20px auto;
+  padding: 16px;
+  border-radius: 16px;
+  box-shadow: 0 4px 24px 0 rgba(0, 0, 0, 0.08);
+  min-height: 77px;
 }
 
 p {
-  padding-bottom: 2rem;
+  padding: 1rem 0 2rem;
 
   & span {
     animation: fadeIn 1s ease-in-out;
   }
+}
+
+div {
+  flex-basis: 100%;
+  margin-top: 4px;
+  margin-left: 4px;
 }
 
 @keyframes fadeIn {
@@ -17,4 +35,15 @@ p {
   to {
     opacity: 1;
   }
+}
+
+label {
+  margin-left: 8px;
+  margin-right: 20px;
+}
+
+input[type="radio"] {
+  position: relative;
+  top: 1px;
+  accent-color: var(--llama-color);
 }
