--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,4 @@
-<header>
-  <nav>
-    <a routerLink="/chat" routerLinkActive="active">Chat</a>
-    <a routerLink="/youtube" routerLinkActive="active">YouTube</a>
-  </nav>
-</header>
-
+<app-header/>
 <router-outlet/>
 
 
