--- a/src/assets/styles/partials/material.partial.scss
+++ b/src/assets/styles/partials/material.partial.scss
@@ -1,5 +1,5 @@
 .mat-mdc-snack-bar-action {
-  color: var(--llama-color) !important;
+  color: var(--primary-color) !important;
 }
 
 .cdk-overlay-pane {
