--- a/src/app/shared/components/header/header.scss
+++ b/src/app/shared/components/header/header.scss
@@ -5,6 +5,7 @@ header {
   position: sticky;
   top: 0;
   user-select: none;
+  z-index: 10;
   
   nav {
     display: flex;
@@ -19,7 +20,7 @@ header {
       margin-right: 6px;
 
       &.active {
-        color: var(--llama-color);
+        color: var(--primary-color);
       }
     }
 
