--- a/src/assets/styles/partials/form.partial.scss
+++ b/src/assets/styles/partials/form.partial.scss
@@ -23,13 +23,13 @@ input[type="text"] {
 }
 
 input[type="text"]:focus {
-  border-color: #4a90e2;
+  border-color: var(--input-color);
 }
 
 input[type="radio"] {
   position: relative;
   top: 1px;
-  accent-color: var(--llama-color);
+  accent-color: var(--primary-color);
   cursor: pointer;
 
   & + label {
@@ -39,7 +39,7 @@ input[type="radio"] {
 
 button[type="submit"] {
   padding: 10px 18px;
-  background: #4a90e2;
+  background: var(--input-color);
   color: #fff;
   border: none;
   border-radius: 8px;
@@ -47,6 +47,29 @@ button[type="submit"] {
   font-weight: 600;
   cursor: pointer;
   transition: background 0.2s;
+}
+
+button[type="reset"] {
+  padding: 3px 8px;
+  background: transparent;
+  color: black;
+  border: 1px solid var(--input-color);
+  border-radius: 8px;
+  font-size: 15px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background 0.2s;
+  display: flex;
+  align-items: center;
+  width: 43px;
+
+  & mat-icon {
+    font-size: 30px;
+    width: 30px;
+    height: 30px;
+    position: relative;
+    left: -2px;
+  }
 }
 
 select {
@@ -59,9 +82,13 @@ select {
   background: #fff;
   text-align: right;
   transition: border 0.2s;
+  cursor: pointer;
 }
 
-button[type="submit"]:disabled {
+button[type="submit"]:disabled, 
+button[type="reset"]:disabled {
   background: #b0c4de;
   cursor: not-allowed;
+  border-color: transparent;
+  opacity: 0.6;
 }
