feat(chat): stop button

--- a/src/assets/styles/partials/form.partial.scss
+++ b/src/assets/styles/partials/form.partial.scss
@@ -51,9 +51,9 @@ button[type="submit"] {
 
 button[type="reset"] {
   padding: 3px 8px;
-  background: transparent;
-  color: black;
-  border: 1px solid var(--input-color);
+  background: #b0c4de;
+  color: rgb(71, 71, 71);
+  border: none;
   border-radius: 8px;
   font-size: 15px;
   font-weight: 600;
